--- a/package.json
+++ b/package.json
@@ -1,23 +1,14 @@
+
 {
   "name": "helpfulat",
-  "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "Helpfulat AI Assistant",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "start": "serve .",
+    "build": "echo 'No build step required for ESM-native app'"
   },
   "dependencies": {
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "@google/genai": "^1.35.0",
-    "uuid": "^13.0.0"
-  },
-  "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "serve": "^14.2.4"
   }
 }
