feat: Simplify package.json and vercel.json
Remove unnecessary build script from package.json and add Vercel specific configuration for output directory to ensure proper deployment.

--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "description": "Helpfulat AI Assistant",
   "type": "module",
   "scripts": {
-    "start": "serve .",
-    "build": "echo 'No build step required for ESM-native app'"
+    "start": "serve ."
   },
   "dependencies": {
     "serve": "^14.2.4"
