feat: Configure for static ESM deployment
Adds `private: true` to package.json to prevent accidental publishing and defines a dummy `build` script. Updates vercel.json to enable `public: true`. These changes prepare the project for static ESM deployments.

--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
-
 {
   "name": "helpfulat",
   "version": "1.0.0",
   "description": "Helpfulat AI Assistant",
   "type": "module",
+  "private": true,
   "scripts": {
-    "start": "serve ."
+    "start": "serve .",
+    "build": "echo 'Skipping build: Static ESM deployment'"
   },
   "dependencies": {
     "serve": "^14.2.4"
