--- a/package.json
+++ b/package.json
@@ -5,10 +5,26 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "start": "serve .",
-    "build": "echo 'Skipping build: Static ESM deployment'"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "start": "vite preview"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.1",
+    "terser": "^5.44.1",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.8"
   },
   "dependencies": {
-    "serve": "^14.2.4"
+    "@google/generative-ai": "^0.3.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "uuid": "^9.0.1"
   }
 }
